--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,45 @@
 name: CI
-on:
-push:
-branches: [ main, master ]
-pull_request:
-branches: [ main, master ]
 
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
-backend:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
-- name: Use Node.js
-uses: actions/setup-node@v4
-with:
-node-version: '18'
-- name: Install backend deps
-working-directory: ./backend
-run: npm ci
-- name: Run backend tests
-working-directory: ./backend
-run: npm test
+  backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-frontend:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
-- name: Build frontend Docker image
-working-directory: ./frontend
-run: docker build -t tp-exam-chat-frontend:ci .
-- name: Smoke test frontend Docker image
-working-directory: ./frontend
-run: |
-docker run --rm -d -p 8081:80 tp-exam-chat-frontend:ci
-sleep 2
-curl -f http://localhost:8081 || (docker ps -a && exit 1)
+      - name: Install backend deps
+        run: |
+          cd backend
+          npm ci
+
+      - name: Run backend tests
+        run: |
+          cd backend
+          npm test
+
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build frontend Docker image
+        run: |
+          cd frontend
+          docker build -t tp-exam-chat-frontend:ci .
+
+      - name: Smoke test frontend Docker image
+        run: |
+          cd frontend
+          docker run --rm -d -p 8081:80 tp-exam-chat-frontend:ci
+          sleep 2
+          curl -f http://localhost:8081 || (docker ps -a && exit 1)
